# sdap-nexus

./: .asf.yaml  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER  DISCLAIMER-WIP  NOTICE  README  README.md  environment.yml  environmentnew.yml  pyproject.toml
.github/workflows/: build.yaml  version.py
analysis/: .gitignore  CHANGELOG.md  README.md  VERSION.txt  conda-requirements.txt  package-list.txt  requirements.txt  setup.py  test.py
analysis/static/: index.html
analysis/tests/: README.md  __init__.py  conftest.py  webapp_test.py
analysis/webservice/: Filtering.py  GenerateImageMRF.py  LayerConfig.py  NexusHandler.py  NexusLivyHandler.py  WorkflowDriver.py  matserver.py  plotting.py  pyproject.toml  webapp.py  webapp_livy.py  webmodel.py
analysis/webservice/algorithms/: Capabilities.py  ColorBarHandler.py  CorrelationMap.py  DailyDifferenceAverage.py  DataInBoundsSearch.py  DataInBoundsSearchMB.py  DataSeriesList.py  DelayTest.py  ErrorTosserTest.py  Heartbeat.py  HofMoeller.py  Lidar.py  LongitudeLatitudeMap.py  MapFetchHandler.py  NexusCalcHandler.py  StandardDeviationSearch.py  TestInitializer.py  TileSearch.py  TimeAvgMap.py  TimeSeries.py  TimeSeriesSolr.py  Tomogram.py  Tomogram3D.py  __init__.py  colortables.py
analysis/webservice/algorithms/doms/: BaseDomsHandler.py  DatasetListQuery.py  DomsInitialization.py  ExecutionCancel.py  ExecutionStatus.py  MatchupQuery.py  MetadataQuery.py  ResultsPlotQuery.py  ResultsRetrieval.py  ResultsRetrievalTest.py  ResultsStorage.py  StacCatalog.py  StatsQuery.py  ValuesQuery.py  __init__.py  config.py  datafetch.py  domsconfig.ini  domsconfig.ini.default  fetchedgeimpl.py  geo.py  histogramplot.py  insitu.py  insitusubset.py  mapplot.py  matchupAVHRR.json  matchupOLD.json  scatterplot.py  subsetter.py  values.py  workerthread.py
analysis/webservice/algorithms/imaging/: ColorTableHandler.py  ImageResult.py  LayerListHandler.py  MapFetchHandler.py  MapFetchHandlerSpark.py  MrfTileServiceHandler.py  ResourceCachingHandler.py  S3CachingHandler.py  ThumbnailHandler.py  WmtsTileServiceHandler.py  WmtsTileServiceHandlerSpark.py  __init__.py  colorization.py  colortable.py  colortables.py  config.ini  layer.py  mapprocessing.py  mapprocessingSpark.py  mrf_reader.py  reprojection.py  tilespecs.py
analysis/webservice/algorithms_spark/: ClimMapSpark.py  CorrMapSpark.py  DailyDifferenceAverageSpark.py  DataAnomalySpark.py  HofMoellerSpark.py  Matchup.py  MatchupDoms.py  MaximaMinimaSpark.py  NexusCalcSparkHandler.py  NexusCalcSparkTornadoHandler.py  TimeAvgMapSpark.py  TimeSeriesSpark.py  VarianceSpark.py  __init__.py  utils.py
analysis/webservice/apidocs/: dataset-populate.js  index.html  openapi.yml
analysis/webservice/config/: algorithms.ini  scheduler.xml  spark_pools.xml  web.ini
analysis/webservice/jobs/: job.py
analysis/webservice/management/: Datasets.py  __init__.py
analysis/webservice/metrics/: MetricsField.py  MetricsRecord.py  __init__.py
analysis/webservice/nexus_tornado/app_builders/: HandlerArgsBuilder.py  NexusAppBuilder.py  RedirectAppBuilder.py  SparkContextBuilder.py  __init__.py
analysis/webservice/nexus_tornado/request/handlers/: NexusAsyncJobHandler.py  NexusHandlerManager.py  NexusRequestHandler.py  __init__.py
analysis/webservice/nexus_tornado/request/renderers/: NexusCAMLRenderer.py  NexusCSVRenderer.py  NexusGIFRenderer.py  NexusJSONRenderer.py  NexusNETCDFRenderer.py  NexusPNGRenderer.py  NexusRendererFactory.py  NexusZIPRenderer.py  __init__.py
analysis/webservice/redirect/: RedirectHandler.py  RemoteCollectionMatcher.py  RemoteSDAPCache.py  __init__.py
analysis/webservice/webmodel/: CustomEncoder.py  Exceptions.py  NexusExecutionResults.py  NexusRequestObject.py  NexusRequestObjectTornadoFree.py  NexusResults.py  RequestParameters.py  StandardNexusErrors.py  StatsComputeOptions.py  __init__.py  cached.py
client/: requirements.txt  setup.py
client/nexuscli/: __init__.py  nexuscli.py  nexuscli_ow.py
climatology/: setup.py
climatology/clim/: ClimatologySpark.py  cache.py  wls.py  (+22 more)
data-access/: .gitignore  VERSION.txt  requirements.txt  setup.py
docker/: Readme.rst
docs/: Makefile  build.rst  collections.rst  conf.py  dockerimages.rst  granule-download.sh  index.rst  intro.rst  make.bat  ningester.rst  quickstart.rst  release.rst  test.rst
helm/: .gitignore  .helmignore  Chart.yaml  README.md  requirements.yaml  values.yaml
nexus-ingest/: Readme.md
tests/: .gitignore  README.md  cdms_reader.py  conftest.py  download_data.sh  requirements.txt  test_cdms.py  test_collections.yaml  test_sdap.py
(+308 files in other folders)
