# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "sdap-nexus"
version = "1.2.0"
description = "Nexus component for Apache SDAP"
authors = ["SDAP PPMC <dev@sdap.apache.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "webservice", from = "analysis" },
    { include = "nexustiles", from = "data-access" }
]
repository = "https://github.com/apache/incubator-sdap-nexus"
exclude = ["docs", "tests"]
classifiers=[
    'Development Status :: 6 - Mature',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.8',
    "License :: OSI Approved :: Apache Software License"
]


[tool.poetry.dependencies]
python = "~=3.8"
netcdf4 = "1.5.5.1"
scipy = "1.6.0"
pyspark = "3.2.1"
py4j = "*"
pytz = "2021.1"
utm = "0.6.0"
shapely = "1.7.1"
backports-functools-lru-cache = "1.6.1"
boto3 = ">=1.16.63"
botocore = "1.24.21"
pillow = "8.1.0"
mpld3 = "0.5.1"
tornado = "6.1"
pyproj = "^3"
pyyaml = "6.0"
importlib_metadata = "4.11.4"
numpy = "1.24.3"
cassandra-driver = "3.24.0"
pysolr = "3.9.0"
elasticsearch = "8.3.1"
urllib3 = "1.26.2"
requests = "*"
schema = "^0.7.5"
s3fs = "2022.5.0"
fsspec = "2022.5.0"
aiohttp = "3.8.1"
xarray = "^2022.3.0"
zarr = "2.11.3"
pandas = "<2.1.0rc0"
geopy = "*"


[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-integration-mark = "*"
pytest-json-report = "^1.5.0"
pytest-metadata = "^2.0.2"
pylint = "^2.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
