# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "nexusanalysis"
version = "1.6.0"
description = "SDAP Nexus Analysis API"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/l2ss-py"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.8"
netCDF4 = "^1.5"
xarray = {version = "*", extras = ["parallel"]}
geopandas ="^0.10"
Shapely = "^1.7.1"
harmony-service-lib = { version = "^1.0.20", optional = true }
pystac = { version = "^0.5.3", optional = true }
julian = "^0.14"
importlib-metadata = "^4.8.1"
h5py = "^3.6.0"
cf-xarray = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7"
pytest-cov = "^2.8"
pylint = "^2.4"
sphinx = "^4.4"
pytest-benchmark = "^3.2.3"
moto = "1.3.14"
jsonschema = "^3.2.0"
m2r2 = "^0.3.1"
sphinx-rtd-theme = "^0.5.2"

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.poetry.extras]
harmony = ["harmony-service-lib", "pystac"]

[tool.poetry.scripts]
run_worker = 'podaac.subsetter.subset_worker:main'
l2ss_harmony = 'podaac.subsetter.subset_harmony:main'
l2ss-py = 'podaac.subsetter.run_subsetter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"